--- a/index.html
+++ b/index.html
@@ -8,39 +8,135 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
 <div class="qa_box">
-   <div class="qa-header">
+   <div class="qa_header">
        <span>Score: <span id="score"></span></span>
        <span id="countdown"> 0 </span>
    </div>
-   <div class="qa-body">
-    <div class="qa-set">
+   <div class="qa_body">
+    <div class="qa_set active">
         <h4>1. Which country is the largest producer of cocoa?</h4>
-        <div class="qa-ans-row">
+        <div class="qa_ans_row">
             <input type="radio" name="a1">
-            <span>'Equador'</span>
+            <span> Equador</span>
         </div>
-        <div class="qa-ans-row">
+        <div class="qa_ans_row">
             <input type="radio" name="a1">
-            <span>'Ghana'</span>
+            <span> Ghana</span>
         </div>
-        <div class="qa-ans-row">
+        <div class="qa_ans_row">
             <input type="radio" name="a1">
-            <span>'Switzerland'</span>
+            <span> Switzerland</span>
         </div>
-        <div class="qa-ans-row">
-            <input type="radio" name="a1">
-            <span>'Côte d Ivoire'</span>
+        <div class="qa_ans_row">
+            <input type="radio" name="a1" valid="valid">
+            <span> Côte d Ivoire</span>
         </div>
     </div>
+    <div class="qa_set">
+        <h4>2. By size, what is the smallest country in the world?</h4>
+        <div class="qa_ans_row">
+            <input type="radio" name="a2">
+            <span> Monaco</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a2" valid="valid">
+            <span> Vatican City</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a2">
+            <span> Malta</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a2">
+            <span> Quatar</span>
+        </div>
+    </div>
+    <div class="qa_set ">
+        <h4>3. Which country has a unicorn as its national animal?</h4>
+        <div class="qa_ans_row">
+            <input type="radio" name="a3" valid="valid">
+            <span> Scotland</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a3">
+            <span> Finland</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a3">
+            <span> Nicaragua</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a3" >
+            <span> Icelande</span>
+        </div>
+    </div>
+    <div class="qa_set ">
+        <h4>4. which country invented croissant?</h4>
+        <div class="qa_ans_row">
+            <input type="radio" name="a4">
+            <span> China</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a4">
+            <span> France</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a4" valid="valid">
+            <span> Austrian</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a4" >
+            <span> Egypt</span>
+        </div>
+    </div>
+    <div class="qa_set ">
+        <h4>5. When did the second world war start?</h4>
+        <div class="qa_ans_row">
+            <input type="radio" name="a5" valid="valid">
+            <span> September 1, 1939</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a5">
+            <span> August 31, 1939</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a5">
+            <span> September 2, 1945</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a5" >
+            <span> November 20, 1940</span>
+        </div>
+    </div>
+    <div class="qa_set ">
+
+        <h4>6. How many different ways are there to cook an egg?</h4>
+        <div class="qa_ans_row">
+            <input type="radio" name="a6">
+            <span> 5</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a6">
+            <span> 48</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a6" valid="valid">
+            <span> 101</span>
+        </div>
+        <div class="qa_ans_row">
+            <input type="radio" name="a6" >
+            <span> 72</span>
+        </div>
+    </div>
+    <div class="qa_set " >
+        <h4>Your total score <span id="totalscore">0</span> out of 100</h4>
+    </div>
    </div>
-   <div class="qa-footer">
+   <div class="qa_footer">
        <span class="btn1" id="skip">Skip</span>
    </div>
 </div>
-
-
 
 
     <script type="text/javascript" src="js/page.js"></script>
